--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gp231982.github.io/Currency-converter-react-ver.2/",
+  "homepage": "https://gp231982.github.io/Currency-converter-react-v2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
